--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,47 +8,52 @@
 
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/splashTitleImage"
         android:layout_width="351dp"
         android:layout_height="298dp"
-        app:srcCompat="@drawable/ic_splash"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/subtitle"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/splashSubtitle"
+        app:layout_constraintHorizontal_bias="0.529"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/ic_splash" />
 
     <TextView
-        android:id="@+id/subtitle"
+        android:id="@+id/splashSubtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text='"Rock" Paper Scissor'
         android:textSize="24sp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/title"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginBottom="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/splashTitle" />
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/splashTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="48dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:text="Think Quick"
         android:textSize="36sp"
-        android:layout_marginBottom="42dp"
-        app:layout_constraintBottom_toTopOf="@+id/version"
-        android:layout_marginRight="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/splashVersion"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintVertical_bias="0.89" />
 
     <TextView
-        android:id="@+id/version"
+        android:id="@+id/splashVersion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="v 1.0 beta"
