Changes in GameActivity

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -13,19 +13,19 @@
         style="@android:style/Widget.Holo.ImageButton"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginRight="34dp"
-        android:background="@drawable/ic_paper"
-        android:backgroundTint="@color/colorAccent"
-        android:tint="@android:color/holo_blue_light"
-        app:layout_constraintRight_toLeftOf="@+id/scissor"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="34dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginRight="34dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/ic_paper"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:tint="@android:color/holo_blue_light"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/scissor"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.82" />
 
     <ImageButton
@@ -33,19 +33,19 @@
         style="@android:style/Widget.Holo.ImageButton"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginRight="8dp"
-        android:background="@drawable/ic_scissor"
-        android:backgroundTint="@color/colorAccent"
-        android:tint="@android:color/holo_blue_light"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginBottom="6dp"
-        app:layout_constraintBottom_toTopOf="@+id/skip"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/ic_scissor"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:tint="@android:color/holo_blue_light"
+        app:layout_constraintBottom_toTopOf="@+id/skip"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
     <ProgressBar
@@ -61,8 +61,7 @@
         android:layout_marginTop="8dp"
         android:max="@android:integer/config_shortAnimTime"
         android:progress="100"
-        android:progressDrawable="@color/colorAccent"
-        android:progressTint="@color/colorPrimary"
+        android:progressDrawable="@color/colorPrimaryDark"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/lifeView"
         app:layout_constraintHorizontal_bias="0.0"
@@ -74,21 +73,22 @@
         android:id="@+id/lifeView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:isIndicator="false"
+        android:progressTint="@color/colorPrimary"
         android:numStars="3"
         android:rating="3"
         android:stepSize="1"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toTopOf="@+id/leftHand"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
         app:layout_constraintVertical_bias="0.737" />
 
     <ImageButton
@@ -103,7 +103,7 @@
         android:layout_marginTop="158dp"
         android:adjustViewBounds="false"
         android:background="@drawable/ic_rock"
-        android:backgroundTint="@color/colorAccent"
+        android:backgroundTint="@color/colorPrimaryDark"
         android:cropToPadding="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -123,7 +123,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/ic_paper"
-        android:backgroundTint="@color/colorAccent"
+        android:backgroundTint="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toRightOf="@+id/labelVs"
@@ -140,7 +140,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:text="VS"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -171,20 +171,20 @@
         style="@android:style/Widget.Holo.ImageButton"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/ic_rock"
-        android:backgroundTint="@color/colorAccent"
+        android:backgroundTint="@color/colorPrimaryDark"
         android:tint="@android:color/holo_blue_light"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.307"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/paper"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
         app:layout_constraintVertical_bias="0.82" />
 
     <Button
@@ -195,7 +195,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
-        android:background="@color/colorAccent"
+        android:background="@color/colorPrimaryDark"
         android:text="SKIP"
         android:textColor="@color/background"
         android:textSize="24sp"
