--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -6,11 +6,11 @@
         <item>Make a draw!</item>
     </string-array>
     <string-array name="hardQuestInfos">
-        <item>Win against the leftHand!</item>
-        <item>Win against the rightHand!</item>
-        <item>Lose against the leftHand!</item>
-        <item>Lose against the rightHand!</item>
-        <item>Make a draw with the leftHand!</item>
-        <item>Make a draw with the rightHand!</item>
+        <item>Win against the winner!</item>
+        <item>Win against the looser!</item>
+        <item>Lose against the winner!</item>
+        <item>Lose against the looser!</item>
+        <item>Make a draw with the winner!</item>
+        <item>Make a draw with the looser!</item>
     </string-array>
 </resources>
